// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScenariosDisplay Renders custom class name 1`] = `
<span
  className="class-name"
>
  <span
    className="fd-badge fd-badge--filled fd-has-margin-right-tiny fd-has-background-color-background-1 fd-has-color-text-3"
  >
    a
  </span>
  <span
    className="fd-badge fd-badge--filled fd-has-margin-right-tiny fd-has-background-color-background-1 fd-has-color-text-3"
  >
    b
  </span>
  <span
    className="fd-badge fd-badge--filled fd-has-margin-right-tiny fd-has-background-color-background-1 fd-has-color-text-3"
  >
    c
  </span>
</span>
`;

exports[`ScenariosDisplay Renders custom placeholder when there are no scenarios 1`] = `
<span>
  No scenarios
</span>
`;

exports[`ScenariosDisplay Renders default placeholder when there are no scenarios 1`] = `
<span>
  -
</span>
`;

exports[`ScenariosDisplay Renders scenario list 1`] = `
<span>
  <span
    className="fd-badge fd-badge--filled fd-has-margin-right-tiny fd-has-background-color-background-1 fd-has-color-text-3"
  >
    a
  </span>
  <span
    className="fd-badge fd-badge--filled fd-has-margin-right-tiny fd-has-background-color-background-1 fd-has-color-text-3"
  >
    b
  </span>
  <span
    className="fd-badge fd-badge--filled fd-has-margin-right-tiny fd-has-background-color-background-1 fd-has-color-text-3"
  >
    c
  </span>
</span>
`;
